<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Elemental Heroes</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="card_1">Card 1</string>
    <string name="card_2">Card 2</string>
    <string name="draw_card">Draw Card</string>
    <string name="flame_man">Flame Man</string>
    <string name="pyro_freak">Pyro Freak</string>
    <string name="fire_striker">Fire Striker</string>
    <string name="fire_lord">Fire Lord</string>
    <string name="small_trout">Small Trout</string>
    <string name="fiesty_salmon">Fiesty Salmon</string>
    <string name="mermaid_warrior">Mermaid Warrior</string>
    <string name="Leviathan">Leviathan</string>
    <string name="campfire">Campfire</string>
    <string name="baby_owl">Baby Owl</string>
    <string name="bat">Bat</string>
    <string name="swift_eagle">Swift Eagle</string>
    <string name="sky_hawk">Sky Hawk</string>
    <string name="lively_pebble">Lively Pebble</string>
    <string name="giant_golemn">Giant Golemn</string>
    <string name="crocker">Crocker</string>
    <string name="flailing_boulder">Flailing Boulder</string>
    <string name="cancel">Cancel</string>
    <string name="play_card">Play Card</string>
    <string name="endTurn">End Turn</string>
    <string name="fire_general">General Huǒ</string>

    <string name="enrage_description">
            <strong>Enrage</strong> <em>(This creature gains +1 attack when it destroys another creature)</em>
    </string>
    <string name="battle_ready_description">
            <strong>Battle Ready</strong> <em>(This creature can act as soon as it enters the battlefield)</em>
    </string>
    <string name="air_shield_desc"><strong>Air Shield</strong> <em>(This creature cannot be reduced below X health in 1 attack, where X is the air shield value)</em></string>
    <string name="concentrate_description">
        <strong>Concentrate</strong> <em>(The owner of this card draws an extra card and get an extra action at the start of each turn)</em>
    </string>
    <string name="endurance_description">
        <strong>Endurance</strong> <em>(When this creature makes an attack it becomes a defender)</em>
    </string>
    <string name="generate_description">
        <strong>Generate</strong> <em>(This creature generates energy and adds it to you energy supply)</em>
    </string>
    <string name="growth_description">
        <strong>Growth</strong> <em>(Each turn this creature gains +1 defense and +1 health for X turns)</em>
    </string>
    <string name="lifetap_description">
        <strong>Lifetap</strong> <em>(At the start of each turn this creature and it\'s owner\'s hero gains life)</em>
    </string>

    <string name="campfire_sub">A simple fire</string>
    <string name="pyro_freak_sub">Supreme firestarter</string>
    <string name="fire_striker_sub">The general\'s fastest</string>
    <string name="elrath_sub">Fire ogre</string>
    <string name="numbal_sub">Phoenix scout</string>
    <string name="wallc_sub">Phoenix King</string>
    <string name="fire_general_sub">Commander of fire</string>
    <string name="image_background_desc">Image background</string>
    <string name="example_attack_value">2</string>
    <string name="example_armor_value">2</string>
    <string name="example_health_value">23</string>
</resources>
